[backend] Add exhibit hostname to API-exposed overlay parameters
